# CoolServer

./: CMakeLists.txt  README.md
CoolServer/: CMakeLists.txt  Config.cpp  Config.h  main.cpp
CoolServer/Base/: NonCopyable.h
CoolServer/Conf/: CMakeLists.txt  libconfig.cpp  libconfig.h  libconfig.h++  wincompat.h
